--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body bgcolor=orange>
 <b><font color="black" size="7">Oyun Haberleri<b>
 <br><br/>
-<a href="file:///C:/Users/PC/Desktop/index.html"><font color="purple" size="3"> Fortnite</a>
+<a href="">ROCKET LEAUGE ÜCRETSİZ OLUYOR.Haberin devamı için tıkla.
 </body>
 </html>
 
