--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body bgcolor=orange>
 <b><font color="black" size="7">Oyun Haberleri<b>
 <br><br/>
-<a href="">ROCKET LEAUGE ÜCRETSİZ OLUYOR.Haberin devamı için tıkla.
+<a href="https://www.rocketleague.com/news/rocket-league-going-free-to-play-this-summer/">ROCKET LEAUGE ÜCRETSİZ OLUYOR.Haberin devamı için tıkla.
 </body>
 </html>
 
