--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body bgcolor=orange>
 <b><font color="black" size="7">Oyun Haberleri<b>
 <br><br/>
-<font color="purple" size="3"<a href="https://www.rocketleague.com/news/rocket-league-going-free-to-play-this-summer/">ROCKET LEAUGE ÜCRETSİZ OLUYOR.
+<font color="purple" size="3"><a href="https://www.rocketleague.com/news/rocket-league-going-free-to-play-this-summer/">ROCKET LEAUGE ÜCRETSİZ OLUYOR.
 </body>
 </html>
 
